# spike-transcript-models-comparison

./: Makefile  README.md  pyproject.toml
src/: app.py  similarity.py
src/adapters/: deepgram.py  google.py  openai.py  speechmatics.py
