[project]
name = "spike-transcript-models-comparison"
version = "0.1.0"
description = ""
authors = [
    {name = "Ageu-Meireles",email = "ageu.meireles@ctctech.com.br"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "streamlit (>=1.44.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "deepgram-sdk (>=3.10.1,<4.0.0)",
    "openai (>=1.69.0,<2.0.0)",
    "speechrecognition (>=3.14.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
